--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -4,7 +4,7 @@
 	min-width: 11.7rem;
 	text-align: center;
 	padding: .5rem 2rem;
-	transition: 0.5s ease;
+	// transition: 0.5s ease;
 	display: inline-block;
 	border-radius: 6.6rem;
 
